...
        app:layout_constraintRight_toRightOf="parent"
        app:popupTheme="@color/PIBLUE"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="-47dp" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/PIBLUE"
        android:backgroundTintMode="src_in"
        android:ems="10"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <EditText
        android:id="@+id/editText_secret"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/PIBLUE"
        android:backgroundTintMode="src_in"
        android:ems="10"
...
        app:layout_constraintTop_toBottomOf="@id/textView_encoding_title"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/radio_base32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/base32_encoded_secret"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/hex_encoded_secret"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/with_pin"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_encoding" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/PIBLUE"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="monospace"
...
