...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/label"
            android:layout_width="214dp"
            android:layout_height="36dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_row"
            android:layout_width="match_parent"
            android:layout_height="36dp" />
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>
