...

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewToken"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

...
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

    <Button
        android:id="@+id/allow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewToken"
        android:layout_alignBottom="@+id/textViewToken"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
...
